--- a/responsive.css
+++ b/responsive.css
@@ -12,6 +12,10 @@
         flex-direction: column;
         align-items: center;
     }
+    header{
+        visibility: visible;
+        position: relative;
+    }
     .img-section{
         height: 340px;
         width: 340px;
