--- a/style.css
+++ b/style.css
@@ -19,10 +19,20 @@ body::before{
     transform: rotate(-15deg);
     z-index: -1;
 }
-/* .menu{
+header{
+    visibility: hidden;
+    position: absolute;
+    display: flex;
+    justify-content:flex-end;
+    align-items:center;
     width: 100%;
     height: 110px;
-} */
+    background: orange;
+    font-size:50px;
+}
+.menu{
+    margin-right: 30px;
+}
 
 
 
